# pytaon

./: .coveragerc  .gitignore  README.rst  pyproject.toml
examples/: forcas.py  gravity.py  koch.py  matriz.py  pong.py  retas.py
phys/: __init__.py  aabb.py  body.py  circle.py  mat2.py  mat22.py  renderer.py  space.py  transform.py  vec2d.py
pytaon/: __init__.py  aabb.py  body.py  collision.py  forces.py  space.py  transform.py  vec2d.py
tests/: conftest.py  test_mat2.py  test_vec2d.py
